# LavaVu

./: .appveyor.yml  .gitignore  .gitmodules  .hgignore  .travis.yml  .zenodo.json  CMakeLists.txt  Dockerfile  GLucifer.cpp  LICENSE.md  LV  LavaVu.i  LavaVuPython.i  LavaVuPython.py  LavaVuPython_wrap.cxx  MANIFEST.in  Makefile  README.md  SConscript  __init__.py  build-index.sh  control.py  demo.py  docparse.py  extensions.py  lavavu.py  patchwheel.py  pyproject.toml  requirements.txt  server.py  setup.py  version.py
.github/workflows/: conda_deploy.yml  docker-image-binder.yaml  egl_deploy.yaml  emscripten.yaml  macos_wheel_test.yaml  new_deploy.yaml  osmesa_deploy.yaml  publish.yaml  python_conda_upload.yml  test_deploy.yaml  test_wheels.yaml  testing.yaml  testtest.yaml  wheel_deploy  wheel_deploy.yaml
LavaVuPython/: __init__.py
binder/: Dockerfile
cave/: CMakeLists.txt  GLucifer.cpp  LavaVR.cpp  init.py
conda/: build.sh  environment.yml  meta.yaml
docker/: rebuild.sh
docker/base/: Dockerfile
docker/latest/: Dockerfile
docs/: README.md
docs/src/: Commandline-Arguments.md  GLDB-file-format.md  Installation.rst  Interaction.md  Makefile  Property-Reference.md  Scripting-Commands-Reference.md  Setting-Properties.md  Tutorials.rst  conf.py  generate_api_documentation.py  index.rst  requirements.txt  run-nb-to-rst.sh
lavavu/: LavaVuPython.py  __init__.py  __main__.py  amalgamate.py  aserver.py  control.py  convert.py  dict.json  lavavu.py  points.py  server.py  tracers.py  vutils.py
lavavu/html/: LavaVu-amalgamated.css  LavaVu.data  LavaVu.js  LavaVu.wasm  OK-min.js  baseviewer.js  control.css  control.js  dat-gui-light-theme.css  draw.js  drawbox.js  emscripten-template.js  emscripten.css  emscripten.js  gui.css  index.html  interactive.html  interactive.js  menu.js  styles.css  viewer.html  viewer_template.html  webview-template.html  webview.html
lavavu/osmesa/: LavaVuPython.py
lavavu/shaders/: default.frag  default.vert  fontShader.frag  fontShader.vert  lineShader.frag  lineShader.vert  lineShaderWEBGL.frag  lineShaderWEBGL.vert  pointShader.frag  pointShader.vert  triShader.frag  triShader.vert  triShaderWEBGL.vert  volumeShader.frag  volumeShader.vert  volumeShaderWEBGL.frag
notebooks/: ColourMaps.ipynb  Particles.ipynb  Points.ipynb  QuickStart.ipynb  SurfaceModels.ipynb  Testing.ipynb  TexturedTopography.ipynb  Volume.ipynb
notebooks/PrepareNewTextures/: PrepareMaps.ipynb
scripts/: lavavu.py  rgb_to_hex.py  update_db.py  vectest.py  xyb2gldb.py  xyz2gldb-vmd-chain.py  xyz2gldb-vmd.py  xyz2gldb.py
src/: ApplicationInterface.h  ColourMap.cpp  ColourMap.h  Colours.cpp  Colours.h  Contour.cpp  Contour.h  DrawState.cpp  DrawState.h  DrawingObject.cpp  DrawingObject.h  Extensions.cpp  Extensions.h  FontLine.h  FontSans.cpp  FontSans.h  GLUtils.cpp  GLUtils.h  GLuciferServer.cpp  GLuciferServer.h  GLuciferViewer.cpp  GLuciferViewer.h  Geometry.cpp  Geometry.h  GraphicsUtil.cpp  GraphicsUtil.h  Include.h  InputInterface.h  InteractiveViewer.cpp  IsoSurface.cpp  IsoSurface.h  LavaVu.cpp  LavaVu.h  LavaVuPython.i  LavaVuPython_wrap.cxx  Lines.cpp  LinesSorted.cpp  Links.cpp  Model.cpp  Model.h  (+37 more)
src/Main/: AGLViewer.cpp  AGLViewer.h  CGLViewer.cpp  CGLViewer.h  CocoaViewer.h  CocoaViewer.m  CocoaViewer.mm  EGLViewer.cpp  EGLViewer.h  GLFWViewer.cpp  GLFWViewer.h  GlutViewer.cpp  GlutViewer.h  OSMesaViewer.cpp  OSMesaViewer.h  SDLViewer.cpp  SDLViewer.h  X11Viewer.cpp  X11Viewer.h  main.cpp
src/html/: OK-min.js  control.css  control.js  controller.html  draw.js  drawbox.js  gl-matrix-min.js  index.html  server.js  styles.css
src/jpeg/: jpgd.cpp  jpge.cpp
src/shaders/: lineShader.frag  lineShader.vert  lineShaderWEBGL.vert  pointShader.frag  pointShader.vert  pointShaderWEBGL.frag  pointShaderWEBGL.vert  triShader.frag  triShader.vert  triShaderWEBGL.frag  triShaderWEBGL.vert  volumeShader.frag  volumeShader.vert  volumeShaderWEBGL.frag  volumeShaderWEBGL.vert
src/windows/: Installer.iss  LavaVu.vcxproj  gLuciferViewer.sln  gLuciferViewer.vcxproj  icons.resource  version.cpp
