[project]
name = "lavavu"
authors = [
    {name = "Owen Kaluza", email = "owen@kaluza.id.au"},
]
description = "Python interface to LavaVu OpenGL 3D scientific visualisation utilities"
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
    'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Environment :: X11 Applications',
    'Environment :: MacOS X :: Cocoa',
    'Environment :: Win32 (MS Windows)',
    'Topic :: Multimedia :: Graphics :: 3D Rendering',
    'Topic :: Scientific/Engineering :: Visualization',
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: C++',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Framework :: Jupyter',
    'Framework :: IPython'
]
requires-python = ">=3.5"
dynamic = ["version", "dependencies"]
#dynamic = ["version", "description", "dependencies"]

[project.urls]
Documentation = "https://lavavu.github.io"
Source = "https://github.com/lavavu/LavaVu"

#[project.scripts]
[project.gui-scripts]
LavaVu = 'lavavu.__main__:main'

[tool.setuptools]
include-package-data = false
#packages = ["lavavu"]
#package-dir = {'lavavu' = 'lavavu'}
#exclude = ["html", "shaders"]

[tool.setuptools.packages.find]
include = ["lavavu*"]
exclude = ["html*", "shaders*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "setup.version"}

[tool.setuptools.package-data]
lavavu = ['font.bin', 'dict.json', 'shaders/*', 'html/*', '*.dll']

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "wheel",
    "build",
    "setuptools>=61.2",
    "packaging",
    "numpy==1.13.3; python_version=='3.6'",
    "numpy==1.14.5; python_version=='3.7'",
    "numpy==1.24.4; python_version=='3.8'",
    "numpy==2.0.0; python_version=='3.9'",
    "numpy==2.0.0; python_version=='3.10'",
    "numpy==2.0.0; python_version=='3.11'",
    "numpy==2.0.0; python_version=='3.12'",
    "numpy==2.1.0; python_version=='3.13'",
]

[project.entry-points."gui_scripts"]
LV = 'lavavu.__main__:main'
LavaVu = 'lavavu.__main__:main'

